--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -39,6 +39,17 @@ body {
     rgb(var(--background-start-rgb));
 }
 
+.mask-image {
+  -webkit-mask-image: url(/img/crack.png);
+  mask-image: url(/img/crack.png);
+  -webkit-mask-size: contain;
+  mask-size: contain;
+  -webkit-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
+  -webkit-mask-position: center;
+  mask-position: center;
+}
+
 @layer utilities {
   .text-balance {
     text-wrap: balance;
