--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -42,7 +42,7 @@ body {
 .mask-image {
   -webkit-mask-image: url(/img/mask3.png);
   mask-image: url(/img/mask3.png);
-  
+
   -webkit-mask-size: contain;
   mask-size: contain;
   -webkit-mask-repeat: no-repeat;
@@ -53,8 +53,12 @@ body {
 }
 
 .about-bg {
-  background: rgb(15,22,35);
-  background: linear-gradient(180deg, rgba(15,22,35,1) 0%, rgba(17,24,39,1) 100%);
+  background: rgb(15, 22, 35);
+  background: linear-gradient(
+    180deg,
+    rgba(15, 22, 35, 1) 0%,
+    rgba(17, 24, 39, 1) 100%
+  );
 }
 
 @layer utilities {
@@ -63,3 +67,11 @@ body {
   }
 }
 
+.fixed > span:first-of-type {
+  transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
+  transform: scale(0);
+}
+
+.fixed:hover > span:first-of-type {
+  transform: scale(1);
+}
